--- a/PersonalRestaurantGuide/server/package.json
+++ b/PersonalRestaurantGuide/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
     "start": "node server.js",
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.0",
     "nodemon": "^2.0.20",
