--- a/PersonalRestaurantGuide/package.json
+++ b/PersonalRestaurantGuide/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.3.8",
     "axios": "^1.2.1",
     "expo": "~47.0.8",
+    "expo-cli": "^6.0.8",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
